# eos

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  eos.spec.in  genversion.sh
authz/: CMakeLists.txt
client/: CMakeLists.txt
client/grpc/: Ns.cc
cmake/: EosCompileFlags.cmake  EosFindLibs.cmake  EosSummary.cmake  FindProtobuf3.cmake  Findeosfolly.cmake  Findfuse.cmake  Findlibradosfs.cmake  Findrichacl.cmake
common/: AutoRepair.cc  AutoRepair.hh  CMakeLists.txt  ConcurrentQueue.hh  FileSystem.cc  FileSystem.hh  LayoutId.hh  Logging.cc  Logging.hh  Mapping.cc  OAuth.cc  Path.hh  RWMutex.cc  RWMutex.hh  RateLimit.hh  Report.cc  Report.hh  SharedMutex.hh  SharedMutexWrapper.hh  StringConversion.hh  StringTokenizer.cc  StringTokenizer.hh  SymKeys.cc  TransferQueue.cc  VirtualIdentity.hh  eos_shared_mutex.hh
common/concurrency/: AtomicUniquePtr.h  RCULite.hh  ThreadEpochCounter.hh
common/plugin_manager/: PluginManager.cc  PluginManager.hh
common/token/: EosTok.cc  EosTok.hh  Token.hh
console/: CMakeLists.txt  ConsoleMain.cc
console/commands/: ICmdHelper.cc  ICmdHelper.hh  com_attr.cc  com_file.cc  com_find.cc  com_io.cc  com_proto_debug.cc  com_proto_fs.cc  com_proto_group.cc  com_proto_io.cc  com_proto_ns.cc  com_proto_rm.cc  com_proto_space.cc  com_space.cc
debian/: control
doc/: backup_clone.rst  develop.rst  releases.rst
doc/configuration/: autorepair.rst  wfe.rst
doc/releases/: citrine-release.rst
doc/using/: reports.rst  tokens.rst
fst/: CMakeLists.txt  FmdDbMap.cc  Messaging.cc  ScanDir.cc  XrdFstOfs.cc  XrdFstOfs.hh  XrdFstOfsFile.cc  XrdFstOfsFile.hh
fst/io/: FileIo.hh  FileIoPlugin-Server.cc  FileIoPluginCommon.hh  RadosIo.cc  RadosIo.hh
fst/layout/: LayoutPlugin.cc
fst/storage/: Balancer.cc  Communicator.cc  FileSystem.cc  MgmSyncer.cc  Publish.cc  Remover.cc  Storage.cc  Storage.hh  Verify.cc
fst/tests/: CMakeLists.txt
fst/tools/: RainHdrDump.cc
fst/txqueue/: TransferMultiplexer.cc  eoscp.cc
fst/utils/: OpenFileTracker.hh
fuse/: AuthIdManager.hh  BoundIdentityProvider.cc  BoundIdentityProvider.hh  CMakeLists.txt  CredentialCache.hh  CredentialFinder.cc  CredentialFinder.hh  EnvironmentReader.cc  EnvironmentReader.hh  LoginIdentifier.cc  LoginIdentifier.hh  ProcCache.cc  ProcCache.hh  ProcessCache.cc  ProcessCache.hh  ProcessInfo.cc  ProcessInfo.hh  ShardedCache.hh  Utils.cc  Utils.hh  eosfuse.cc  eosfusebind  filesystem.cc  filesystem.hh
fuse/FuseCache/: LayoutWrapper.cc
fuse/tests/: CMakeLists.txt  CredentialFinder.cc  credential-finder.cc  environment-reader.cc  login-identifier.cc  process-info.cc  sharded-cache.cc  utils.cc
fusex/: CMakeLists.txt  README.md  eosfuse.cc  eosfuse.hh  fusex.proto  proto_message_inheritor.hh
fusex/auth/: BoundIdentityProvider.cc  BoundIdentityProvider.hh  ProcessCache.cc  UnixAuthenticator.cc  UnixAuthenticator.hh  UserCredentialFactory.cc
fusex/backend/: backend.cc
fusex/cap/: cap.cc  cap.hh
fusex/data/: data.cc  data.hh  diskcache.cc  journalcache.cc  xrdclproxy.cc  xrdclproxy.hh
fusex/kv/: kv.hh
fusex/md/: md.cc  md.hh
fusex/misc/: cleandir.hh  fusexrdlogin.cc  richacl.hh
fusex/tests/: CMakeLists.txt
gitlab-ci/: .gitlab-ci-test-helm_include.yml  after_script_docker_test.sh  after_script_k8s_test.sh  before_script_docker_test.sh  before_script_k8s_test.sh  export_branch.sh  k8s_system_test_script.sh  new-script_system_test.sh  new_system_test_script.sh  remove_old_artifacts_debian.sh  setup_ccache.sh  setup_ccache_deb.sh  setup_ccache_fc.sh  setup_ccache_slc6.sh  store_artifacts.sh  store_artifacts_debian.sh  utilities_func_for_tests.sh
gitlab-ci/eosci-OS-base/: Dockerfile_eosci-c8  Dockerfile_eosci-cc7  Dockerfile_eosci-slc6
gitlab-ci/eosci-base/: Dockerfile
gitlab-ci/prebuild_OSbase/: Dockerfile_prebuild-c8  Dockerfile_prebuild-cc7  Dockerfile_prebuild-cc7_exotic  Dockerfile_prebuild-slc6
mgm/: Acl.cc  Acl.hh  CMakeLists.txt  Converter.cc  FsView.cc  FsView.hh  Fsck.cc  FuseServer.cc  FuseServer.hh  GeoBalancer.cc  GroupBalancer.cc  GroupBalancer.hh  GroupDrainer.cc  InFlightTracker.cc  InFlightTracker.hh  Iostat.cc  Iostat.hh  LRU.cc  Macros.cc  Macros.hh  Namespace.hh  PathRouting.cc  Policy.cc  Policy.hh  QdbMaster.cc  Quota.cc  Quota.hh  Recycle.cc  RouteEndpoint.cc  Stat.hh  TapeAwareGc.cc  TapeAwareGc.hh  Vid.cc  WFE.cc  WFE.hh  XrdMgmOfs.cc  XrdMgmOfs.hh  XrdMgmOfsConfigure.cc  XrdMgmOfsDirectory.cc  XrdMgmOfsFile.cc
mgm/FuseServer/: Caps.cc  Caps.hh  Clients.cc  Server.cc
mgm/TableFormatter/: TableFormatterBase.cc  TableFormatterBase.hh
mgm/XrdMgmOfs/: Access.cc  Attr.cc  Chown.cc  Exists.cc  Find.cc  FsConfigListener.cc  Fsctl.cc  Rm.cc  SendResync.cc  Stat.cc  Stripes.cc
mgm/auth/: AccessChecker.cc
mgm/balancer/: FsBalancer.cc
mgm/config/: FileConfigEngine.cc  FileConfigEngine.hh  IConfigEngine.hh  QuarkDBConfigEngine.cc
mgm/drain/: DrainFS.cc  DrainTransferJob.cc
mgm/fsck/: Fsck.cc
mgm/groupbalancer/: BalancerEngine.hh  BalancerEngineUtils.hh  FreeSpaceBalancerEngine.cc  FreeSpaceBalancerEngine.hh  MinMaxBalancerEngine.hh  RandomBalancerEngine.cc  RandomBalancerEngine.hh
mgm/grpc/: GrpcNsInterface.cc
mgm/http/: HttpHandler.cc
mgm/placement/: ClusterMap.cc  ClusterMap.hh  FsScheduler.cc
mgm/proc/: IProcCommand.cc  IProcCommand.hh  ProcCommand.cc  ProcCommand.hh  ProcInterface.cc  ProcInterface.hh  proc_fs.cc  proc_fs.hh
mgm/tgc/: CachedValue.hh  Constants.hh  FreeSpace.cc  (+49 more)
mq/: CMakeLists.txt  XrdMqClient.cc  XrdMqClient.hh  XrdMqOfs.cc  XrdMqSharedObject.cc
namespace/: CMakeLists.txt  Prefetcher.cc
proto/: CMakeLists.txt
rtb/: build  fuseTests  rtb-asroot  rtb-build  rtb-test  start_services-rtb.sh
sync/: CMakeLists.txt
test/: CMakeLists.txt  EosIdMapBenchmark.cc  eos-backup  eos-backup-browser  eos-backup-test  eos-drain-test  eos-fsck-test  eos-grpc-test  eos-instance-test
test/microbenchmarks/: CMakeLists.txt
test/microbenchmarks/common/: BMThreadMacros.hh  BM_AtomicPtr.cc  BM_IdMap.cc  BM_StringUtils.cc
test/microbenchmarks/mgm/: BM_InFlightTracker.cc  BM_RRSeed.cc
unit_tests/: CMakeLists.txt
(+113 files in other folders)
